WAVE Correction, changed caption contrast for disabled users

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,5 +1,6 @@
 caption {
   caption-side: top;
+  font-weight: bold;
 }
 
 .table-dark {
